# workflow-rs-demo

./: .releaserc  .releaserc.yaml  Cargo.toml  Dockerfile  README.md  docker-compose-testing.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build-img.yaml  release.yaml
src/: main.rs
