[package]
name = "workflow-rs-demo"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = {version = "1"}
# redis client 
fred = { version = "8", features = [
    "partial-tracing",
    "metrics",
    "network-logs",
    "subscriber-client",
    "serde-json",
    "default-nil-types",
    "sha-1",
] }

[dev-dependencies]
tower = "0.4"
http-body-util = "0.1"
